tests/parser/bug_70/test_5.m.out
In test_5.m, line 6
| foo = [~, x];
|         ^ error: expected IDENTIFIER, found COMMA instead
MISS_HIT Debug Summary: 1 file(s) analysed, 1 error(s)
