tests/parser/bug_70/test_5.m
% (c) Copyright 2020 Zenuity AB

x = 0;

% This is invalid
foo = [~, x];
